--- a/scss/screens/portfolio.scss
+++ b/scss/screens/portfolio.scss
@@ -10,6 +10,20 @@
   .subtitle {
     font-weight: 300;
   }
+  .carousel {
+    display: block;
+    @media (max-width: $md) {
+      display: none;
+    }
+
+    &.carousel-mobile {
+      display: none;
+      @media (max-width: $md) {
+        display: block;
+      }
+    }
+  }
+
 
   .slider {
     position: relative;
@@ -45,7 +59,7 @@
           height: 510px;
           background: center no-repeat;
           background-size: 100%;
-          @media (max-width: $md) {
+          @media (max-width: $xs) {
             height: 320px;
           }
 
@@ -96,8 +110,8 @@
         border: 1px solid #000;
         transform: rotate(45deg);
       }
-
     }
+
     .button-prev {
       &:before {
         left: 17px;
@@ -105,6 +119,7 @@
         border-right-color: transparent;
       }
     }
+
     .button-next {
       &:before {
         right: 17px;
@@ -121,6 +136,17 @@
     justify-content: center;
     width: 140px;
     margin: 60px auto 50px auto;
+    @media (max-width: $md) {
+      display: none;
+    }
+
+    &-mobile {
+      display: none;
+      @media (max-width: $md) {
+        display: flex;
+        width: 200px;
+      }
+    }
 
     .indicator {
       width: 8px;
