--- a/scss/screens/about-platform.scss
+++ b/scss/screens/about-platform.scss
@@ -7,8 +7,27 @@
   }
 
   .map {
+    display: block;
     width: 100%;
     height: 522px;
+    @media (max-width: $sm) {
+      display: none;
+    }
+
+    &-mobile {
+      display: none;
+      width: 100%;
+      height: 400px;
+      background: url("../images/map.png") center no-repeat;
+      background-size: 110%;
+      @media (max-width: $sm) {
+        display: block;
+      }
+      @media (max-width: $xs) {
+        height: 250px;
+      }
+
+    }
   }
 
   .calculate {
