--- a/scss/screens/counter.scss
+++ b/scss/screens/counter.scss
@@ -49,4 +49,8 @@
     .flip-clock-wrapper ul li a div.down {border-bottom-left-radius: 3px; border-bottom-right-radius: 3px;}
     .flip-clock-wrapper ul li a div.up:after {top: 38px;height: 2px;}
   }
+
+  .btn-create-app {
+    margin-top: 80px;
+  }
 }
