--- a/scss/elements/header.scss
+++ b/scss/elements/header.scss
@@ -16,16 +16,14 @@
       flex-wrap: nowrap;
 
       > :first-child {
-        order: 1;
         margin-right: 15px;
       }
 
       > :nth-child(2) {
-        order: 3;
+        padding: 0;
       }
 
       > :last-child {
-        order: 2;
       }
     }
   }
@@ -85,7 +83,7 @@
     opacity: 0;
     transition: .7s;
 
-    > .container {
+    > .navigation-list {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -122,6 +120,97 @@
     }
   }
 
+  .language-menu {
+    height: 100vh;
+    top: 0;
+    z-index: 999;
+    &.mobile {
+      display: none;
+      @media (max-width: $md) {
+        display: block;
+      }
+    }
+
+    &.desktop {
+      position: absolute;
+      top: 40px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      height: auto;
+      padding: 4px 0;
+      border-radius: 4px;
+      background-color: #fafafa;
+      box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.11);
+
+      .navigation-list {
+        align-items: center;
+
+        a {
+          padding: 6px 0;
+          box-shadow: none;
+        }
+      }
+      @media (max-width: $md) {
+        display: none;
+      }
+    }
+
+    .btn-close,
+    .title,
+    a {
+      padding-left: 15px;
+    }
+
+    .btn-close {
+      position: relative;
+      width: 50px;
+      height: 40px;
+      margin: 10px 0 40px 0;
+
+      &:after,
+      &:before {
+        content: '';
+        position: absolute;
+        top: 20px;
+        width: 25px;
+        height: 2px;
+        background-color: #000;
+      }
+
+      &:after {
+        transform: rotate(-45deg);
+      }
+
+      &:before {
+        transform: rotate(45deg);
+      }
+
+    }
+
+    .navigation-list  {
+      align-items: stretch;
+
+      :first-child {
+        box-shadow: none;
+      }
+    }
+
+
+    h4 {
+      text-align: left;
+      font-weight: 700;
+      font-size: 20px;
+    }
+
+    a {
+      margin: 0;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+    }
+  }
+
   .options-menu {
     display: flex;
     justify-content: space-between;
@@ -137,6 +226,10 @@
       &-language,
       &-create-app {
         font-size: 12px;
+      }
+
+      &-language {
+        position: relative;
       }
 
       &-create-app {
