--- a/scss/style.css
+++ b/scss/style.css
@@ -92,12 +92,9 @@ a:hover {
         flex-direction: row;
         flex-wrap: nowrap; }
         .header .row > :first-child {
-          order: 1;
           margin-right: 15px; }
         .header .row > :nth-child(2) {
-          order: 3; }
-        .header .row > :last-child {
-          order: 2; } }
+          padding: 0; } }
   .header .logo {
     display: block;
     width: 150px;
@@ -146,7 +143,7 @@ a:hover {
     pointer-events: none;
     opacity: 0;
     transition: .7s; }
-    .header .mobile-navigation > .container {
+    .header .mobile-navigation > .navigation-list {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -170,6 +167,67 @@ a:hover {
       color: #000; }
       .header-navigation a:hover {
         color: #99cc33; }
+  .header .language-menu {
+    height: 100vh;
+    top: 0;
+    z-index: 999; }
+    .header .language-menu.mobile {
+      display: none; }
+      @media (max-width: 992px) {
+        .header .language-menu.mobile {
+          display: block; } }
+    .header .language-menu.desktop {
+      position: absolute;
+      top: 40px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      height: auto;
+      padding: 4px 0;
+      border-radius: 4px;
+      background-color: #fafafa;
+      box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.11); }
+      .header .language-menu.desktop .navigation-list {
+        align-items: center; }
+        .header .language-menu.desktop .navigation-list a {
+          padding: 6px 0;
+          box-shadow: none; }
+      @media (max-width: 992px) {
+        .header .language-menu.desktop {
+          display: none; } }
+    .header .language-menu .btn-close,
+    .header .language-menu .title,
+    .header .language-menu a {
+      padding-left: 15px; }
+    .header .language-menu .btn-close {
+      position: relative;
+      width: 50px;
+      height: 40px;
+      margin: 10px 0 40px 0; }
+      .header .language-menu .btn-close:after, .header .language-menu .btn-close:before {
+        content: '';
+        position: absolute;
+        top: 20px;
+        width: 25px;
+        height: 2px;
+        background-color: #000; }
+      .header .language-menu .btn-close:after {
+        transform: rotate(-45deg); }
+      .header .language-menu .btn-close:before {
+        transform: rotate(45deg); }
+    .header .language-menu .navigation-list {
+      align-items: stretch; }
+      .header .language-menu .navigation-list :first-child {
+        box-shadow: none; }
+    .header .language-menu h4 {
+      text-align: left;
+      font-weight: 700;
+      font-size: 20px; }
+    .header .language-menu a {
+      margin: 0;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1); }
   .header .options-menu {
     display: flex;
     justify-content: space-between;
@@ -182,6 +240,8 @@ a:hover {
       font-size: 14px; }
       .header .options-menu .btn-language, .header .options-menu .btn-create-app {
         font-size: 12px; }
+      .header .options-menu .btn-language {
+        position: relative; }
       .header .options-menu .btn-create-app {
         margin: 0 10px;
         padding: 6px 12px;
@@ -576,6 +636,8 @@ section.banner {
     .counter .flip-clock-wrapper ul li a div.up:after {
       top: 38px;
       height: 2px; } }
+  .counter .btn-create-app {
+    margin-top: 80px; }
 
 .benefits {
   text-align: center;
@@ -807,7 +869,7 @@ section.banner {
     .reviews .slider .slide {
       position: relative;
       width: 280px; }
-      @media (max-width: 992px) {
+      @media (max-width: 1200px) {
         .reviews .slider .slide {
           display: flex;
           flex-direction: column;
@@ -825,7 +887,7 @@ section.banner {
         background: center no-repeat;
         background-size: 100%;
         transform: translateY(-50%); }
-        @media (max-width: 992px) {
+        @media (max-width: 1200px) {
           .reviews .slider .slide .icon {
             position: relative;
             left: auto;
@@ -834,7 +896,7 @@ section.banner {
       .reviews .slider .slide p {
         font-size: 14px;
         padding-left: 80px; }
-        @media (max-width: 992px) {
+        @media (max-width: 1200px) {
           .reviews .slider .slide p {
             padding-left: 0; } }
         .reviews .slider .slide p b {
