--- a/scss/elements/header.scss
+++ b/scss/elements/header.scss
@@ -128,6 +128,13 @@
       display: none;
       @media (max-width: $md) {
         display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        border: 0;
+        overflow-y: scroll;
+
       }
     }
 
@@ -188,27 +195,32 @@
 
     }
 
-    .navigation-list  {
-      align-items: stretch;
+    .navigation-container {
+      .navigation-list  {
+        display: flex;
+        align-items: stretch;
+        flex-direction: column;
 
-      :first-child {
-        box-shadow: none;
+        :first-child {
+          box-shadow: none;
+        }
+      }
+
+
+      h4 {
+        text-align: left;
+        font-weight: 700;
+        font-size: 20px;
+      }
+
+      a {
+        margin: 0;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
       }
     }
 
-
-    h4 {
-      text-align: left;
-      font-weight: 700;
-      font-size: 20px;
-    }
-
-    a {
-      margin: 0;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
-    }
   }
 
   .options-menu {
