--- a/scss/screens/steps.scss
+++ b/scss/screens/steps.scss
@@ -27,6 +27,7 @@
       padding: 0 31px;
     }
     @media (max-width: $md) {
+      min-height: auto;
       padding:  0 120px;
       margin: 30px 0;
     }
