--- a/scss/screens/portfolio.scss
+++ b/scss/screens/portfolio.scss
@@ -61,7 +61,8 @@
           img {
             width: 100%;
             height: auto;
-            border-radius: 5px;
+            border-radius: 10px;
+            box-shadow: 0 0 14px 0 rgba(180, 180, 180, 0.7);
           }
         }
 
