--- a/scss/screens/banner.scss
+++ b/scss/screens/banner.scss
@@ -107,7 +107,7 @@ section.banner {
     height: 630px;
     background-repeat: no-repeat;
     background-position: center;
-    //background-image: url("../images/banner/banner-bg.png");
+    background-image: url("../images/banner/banner-bg.png");
     z-index: 3;
     background-size: 100%;
     @media (max-width: $lg) {
@@ -143,7 +143,7 @@ section.banner {
       top: 38px;
       right: 70px;
       z-index: 2;
-      //background-image: url("../images/banner/banner-bg-2.png");
+      background-image: url("../images/banner/banner-bg-2.png");
       background-size: 100%;
     }
 
@@ -152,7 +152,7 @@ section.banner {
       top: 10px;
       right: 70px;
       z-index: 2;
-      //background-image: url("../images/banner/banner-bg-3.png");
+      background-image: url("../images/banner/banner-bg-3.png");
       background-size: 100%;
     }
 
@@ -160,7 +160,7 @@ section.banner {
       position: absolute;
       top: 39px;
       right: 49px;
-      //background-image: url("../images/banner/banner-bg-4.png");
+      background-image: url("../images/banner/banner-bg-4.png");
       background-size: 100%;
       z-index: 1;
     }
