--- a/scss/style.css
+++ b/scss/style.css
@@ -456,6 +456,7 @@ section.banner {
     height: 630px;
     background-repeat: no-repeat;
     background-position: center;
+    background-image: url("../images/banner/banner-bg.png");
     z-index: 3;
     background-size: 100%; }
     @media (max-width: 1200px) {
@@ -488,17 +489,20 @@ section.banner {
       top: 38px;
       right: 70px;
       z-index: 2;
+      background-image: url("../images/banner/banner-bg-2.png");
       background-size: 100%; }
     section.banner .banner-bg-3 {
       position: absolute;
       top: 10px;
       right: 70px;
       z-index: 2;
+      background-image: url("../images/banner/banner-bg-3.png");
       background-size: 100%; }
     section.banner .banner-bg-4 {
       position: absolute;
       top: 39px;
       right: 49px;
+      background-image: url("../images/banner/banner-bg-4.png");
       background-size: 100%;
       z-index: 1; }
     section.banner .banner-bg-5 {
